# lego-robot-launcher

./: package-lock.json  package.json
src/: configs.html  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/download/: make_download.rs  mod.rs
src-tauri/src/path/: make_download.rs  mod.rs  save_path.rs
src/js/: BackEndOn.js  downloading.js
src/pages/: configs.html  tutorial.html
